--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,45 +1,36 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white">
 
-
+    <!-- Logo ImageView -->
     <ImageView
         android:id="@+id/logo"
         android:layout_width="179dp"
         android:layout_height="124dp"
-        android:layout_marginBottom="10dp"
         android:src="@drawable/descarga"
         app:layout_constraintBottom_toTopOf="@id/textViewMessage"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <!-- TextView -->
-    <TextView
-        android:id="@+id/textViewForgotPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:text="¿Olvidaste tu contraseña?"
-        android:textColor="@color/sinvad"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/indicatorContainer" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"/>
+
+    <!-- Indicator Container LinearLayout -->
     <LinearLayout
         android:id="@+id/indicatorContainer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintTop_toBottomOf="@id/textViewMessage"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textViewMessage">
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="0dp"
+        android:gravity="center">
 
         <ImageView
             android:id="@+id/dot1"
@@ -88,175 +79,208 @@
         android:id="@+id/textViewMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="292dp"
         android:text="Ingrese el código de acceso:"
-        android:textColor="#333333"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="@android:color/black"
+        android:textSize="18sp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@id/indicatorContainer"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"/>
 
-    <GridLayout
-        android:id="@+id/keyboardGrid"
+
+    <!-- Forgot Password TextView -->
+    <TextView
+        android:id="@+id/textViewForgotPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="¿Olvidaste tu contraseña?"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="12sp"
+        app:layout_constraintTop_toBottomOf="@id/indicatorContainer"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"/>
+
+    <!-- RelativeLayout para el GridLayout -->
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:columnCount="3"
-        android:rowCount="4"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textViewForgotPassword">
 
-        <Button
-            android:id="@+id/btn3"
-            android:layout_width="4dp"
-            android:layout_height="80dp"
-            android:layout_row="0"
-            android:layout_column="2"
-            android:layout_columnWeight="1"
-            android:background="@drawable/button_background"
-            android:onClick="onDigitButtonClick"
-            android:text="3"
-            android:textSize="24sp"
-            />
+        <!-- Keyboard GridLayout -->
+        <GridLayout
+            android:id="@+id/keyboardGrid"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:columnCount="3"
+            android:rowCount="4">
 
-        <Button
-            android:id="@+id/btn4"
-            android:layout_width="0dp"
-            android:layout_height="80dp"
-            android:layout_row="1"
-            android:layout_column="0"
-            android:layout_columnWeight="1"
-            android:background="@drawable/button_background"
-            android:onClick="onDigitButtonClick"
-            android:text="4"
-            android:textSize="24sp"/>
+            <Button
+                android:id="@+id/btn3"
+                android:layout_width="4dp"
+                android:layout_height="60dp"
+                android:layout_row="0"
+                android:layout_column="2"
+                android:layout_columnWeight="1"
+                android:background="@drawable/button_background"
+                android:onClick="onDigitButtonClick"
+                android:text="3"
+                android:textColor="@color/black"
+                android:textSize="30sp" />
 
-        <Button
-            android:id="@+id/btn5"
-            android:layout_width="0dp"
-            android:layout_height="80dp"
-            android:layout_row="1"
-            android:layout_column="1"
-            android:layout_columnWeight="1"
-            android:background="@drawable/button_background"
-            android:onClick="onDigitButtonClick"
-            android:text="5"
-            android:textSize="24sp"/>
+            <Button
+                android:id="@+id/btn4"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_row="1"
+                android:layout_column="0"
+                android:layout_columnWeight="1"
+                android:background="@drawable/button_background"
+                android:onClick="onDigitButtonClick"
+                android:text="4"
+                android:textColor="@color/black"
+                android:textSize="30sp" />
 
-        <Button
-            android:id="@+id/btn6"
-            android:layout_width="0dp"
-            android:layout_height="80dp"
-            android:layout_row="1"
-            android:layout_column="2"
-            android:layout_columnWeight="1"
-            android:background="@drawable/button_background"
-            android:onClick="onDigitButtonClick"
-            android:text="6"
-            android:textSize="24sp"/>
+            <Button
+                android:id="@+id/btn5"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_row="1"
+                android:layout_column="1"
+                android:layout_columnWeight="1"
+                android:background="@drawable/button_background"
+                android:onClick="onDigitButtonClick"
+                android:text="5"
+                android:textColor="@color/black"
+                android:textSize="30sp" />
 
-        <Button
-            android:id="@+id/btn7"
-            android:layout_width="0dp"
-            android:layout_height="80dp"
-            android:layout_row="2"
-            android:layout_column="0"
-            android:layout_columnWeight="1"
-            android:background="@drawable/button_background"
-            android:onClick="onDigitButtonClick"
-            android:text="7"
-            android:textSize="24sp"/>
+            <Button
+                android:id="@+id/btn6"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_row="1"
+                android:layout_column="2"
+                android:layout_columnWeight="1"
+                android:background="@drawable/button_background"
+                android:onClick="onDigitButtonClick"
+                android:text="6"
+                android:textColor="@color/black"
+                android:textSize="30sp" />
 
-        <Button
-            android:id="@+id/btn8"
-            android:layout_width="0dp"
-            android:layout_height="80dp"
-            android:layout_row="2"
-            android:layout_column="1"
-            android:layout_columnWeight="1"
-            android:background="@drawable/button_background"
-            android:onClick="onDigitButtonClick"
-            android:text="8"
-            android:textSize="24sp"/>
+            <Button
+                android:id="@+id/btn7"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_row="2"
+                android:layout_column="0"
+                android:layout_columnWeight="1"
+                android:background="@drawable/button_background"
+                android:onClick="onDigitButtonClick"
+                android:text="7"
+                android:textColor="@color/black"
+                android:textSize="30sp" />
 
-        <Button
-            android:id="@+id/btn9"
-            android:layout_width="0dp"
-            android:layout_height="80dp"
-            android:layout_row="2"
-            android:layout_column="2"
-            android:layout_columnWeight="1"
-            android:background="@drawable/button_background"
-            android:onClick="onDigitButtonClick"
-            android:text="9"
-            android:textSize="24sp"/>
+            <Button
+                android:id="@+id/btn8"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_row="2"
+                android:layout_column="1"
+                android:layout_columnWeight="1"
+                android:background="@drawable/button_background"
+                android:onClick="onDigitButtonClick"
+                android:text="8"
+                android:textColor="@color/black"
+                android:textSize="30sp" />
 
-
-        <Button
-            android:id="@+id/btn2"
-            android:layout_width="0dp"
-            android:layout_height="80dp"
-            android:layout_row="0"
-            android:layout_column="1"
-            android:layout_columnWeight="1"
-            android:background="@drawable/button_background"
-            android:onClick="onDigitButtonClick"
-            android:text="2"
-            android:textSize="24sp"/>
-
-        <Button
-            android:id="@+id/btn0"
-            android:layout_width="0dp"
-            android:layout_height="80dp"
-            android:layout_row="3"
-            android:layout_column="1"
-            android:layout_columnWeight="1"
-            android:background="@drawable/button_background"
-            android:onClick="onDigitButtonClick"
-            android:text="0"
-            android:textSize="24sp"/>
-
-        <ImageButton
-            android:id="@+id/btnClear"
-            android:layout_width="0dp"
-            android:layout_height="80dp"
-            android:layout_row="3"
-            android:layout_column="2"
-            android:layout_columnWeight="1"
-            android:adjustViewBounds="true"
-            android:background="@drawable/button_background"
-            android:onClick="onClearButtonClick"
-            android:paddingVertical="16dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/image"
-            android:textSize="24sp"
-            android:padding="24dp"/>
-
-        <ImageView
-            android:id="@+id/btn"
-            android:layout_width="0dp"
-            android:layout_height="80dp"
-            android:layout_row="3"
-            android:layout_column="0"
-            android:layout_columnWeight="1"
-            android:background="@drawable/button_background"
-            android:textSize="24sp"/>
-
-        <Button
-            android:id="@+id/btn1"
-            android:layout_width="0dp"
-            android:layout_height="80dp"
-            android:layout_row="0"
-            android:layout_column="0"
-            android:layout_columnWeight="1"
-            android:background="@drawable/button_background"
-            android:onClick="onDigitButtonClick"
-            android:text="1"
-            android:textSize="24sp" />
+            <Button
+                android:id="@+id/btn9"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_row="2"
+                android:layout_column="2"
+                android:layout_columnWeight="1"
+                android:background="@drawable/button_background"
+                android:onClick="onDigitButtonClick"
+                android:text="9"
+                android:textColor="@color/black"
+                android:textSize="30sp" />
 
 
-    </GridLayout>
+            <Button
+                android:id="@+id/btn2"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_row="0"
+                android:layout_column="1"
+                android:layout_columnWeight="1"
+                android:background="@drawable/button_background"
+                android:onClick="onDigitButtonClick"
+                android:text="2"
+                android:textColor="@color/black"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/btn0"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_row="3"
+                android:layout_column="1"
+                android:layout_columnWeight="1"
+                android:background="@drawable/button_background"
+                android:onClick="onDigitButtonClick"
+                android:text="0"
+                android:textColor="@color/black"
+                android:textSize="30sp" />
+
+            <ImageButton
+                android:id="@+id/btnClear"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_row="3"
+                android:layout_column="2"
+                android:layout_columnWeight="1"
+                android:adjustViewBounds="true"
+                android:background="@drawable/button_background"
+                android:onClick="onClearButtonClick"
+                android:paddingVertical="16dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/image"
+                android:textColor="@color/black"
+                android:textSize="24sp" />
+
+            <ImageView
+                android:id="@+id/btn"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_row="3"
+                android:layout_column="0"
+                android:layout_columnWeight="1"
+                android:background="@drawable/button_background"
+                android:textColor="@color/black"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/btn1"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_row="0"
+                android:layout_column="0"
+                android:layout_columnWeight="1"
+                android:background="@drawable/button_background"
+                android:onClick="onDigitButtonClick"
+                android:text="1"
+                android:textColor="@color/black"
+                android:textSize="30sp" />
+
+
+        </GridLayout>
+    </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
