--- a/app/src/main/res/layout/activity_confirmacion.xml
+++ b/app/src/main/res/layout/activity_confirmacion.xml
@@ -4,13 +4,12 @@
     android:layout_height="match_parent"
     android:background="@android:color/white">
 
-
     <!-- Pregunta -->
     <TextView
         android:id="@+id/textViewQuestion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿Es usted fulano?"
+        android:text="¿Es usted "
         android:textSize="18sp"
         android:textAlignment="center"
         android:textColor="#000000"
@@ -18,14 +17,13 @@
         android:layout_marginTop="24dp" />
 
     <Button
-        android:id="@+id/buttonYes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/textViewQuestion"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="400dp"
+        android:layout_alignParentEnd="true"
         android:layout_marginTop="30dp"
-        android:background="@color/red"
+        android:layout_marginEnd="400dp"
+        android:background="#008f39"
         android:text="Sí"
         android:textColor="@android:color/white"
         android:textSize="16sp"
@@ -36,9 +34,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/textViewQuestion"
-        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="400dp"
         android:layout_marginTop="30dp"
-        android:layout_marginEnd="400dp"
         android:background="@color/black"
         android:text="No"
         android:textColor="@android:color/white"
@@ -46,3 +44,5 @@
         android:onClick="onNoClicked"/>
 
 </RelativeLayout>
+
+
