--- a/app/src/main/res/layout/activity_confirmacion.xml
+++ b/app/src/main/res/layout/activity_confirmacion.xml
@@ -10,11 +10,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="¿Es usted "
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textAlignment="center"
         android:textColor="#000000"
+        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="24dp" />
+        android:layout_marginTop="-100dp"
+        android:layout_marginHorizontal="50dp"/>
 
     <Button
         android:layout_width="wrap_content"
