--- a/app/src/main/res/drawable/grid_buttons_background.xml
+++ b/app/src/main/res/drawable/grid_buttons_background.xml
@@ -2,10 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <stroke
-        android:width="1dp"
-        android:color="@color/sinvad" />
-    <solid
-        android:color="@color/red" />
+        android:width="0.6dp"
+        android:color="@color/sinvad" /> <!-- Utiliza tu color personalizado definido -->
 </shape>
-
-
