--- a/app/src/main/res/layout/activity_confirmacion.xml
+++ b/app/src/main/res/layout/activity_confirmacion.xml
@@ -4,47 +4,161 @@
     android:layout_height="match_parent"
     android:background="@android:color/white">
 
-    <!-- Pregunta -->
+
+    <ImageButton
+        android:id="@+id/buttonConfiguration"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/configuration"
+        android:background="@android:color/transparent"
+        android:onClick="onConfigurationClicked"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"/>
+
+
+
+    <TextView
+        android:id="@+id/textViewSaludo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Holaa !!"
+        android:textSize="80dp"
+        android:textColor="@color/sinvad"
+        android:fontFamily="@font/font_tittle"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@id/textViewQuestion"
+        android:layout_marginBottom="32dp"
+        />
+
     <TextView
         android:id="@+id/textViewQuestion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿Es usted "
-        android:textSize="16sp"
-        android:textAlignment="center"
+        android:text=""
+        android:textSize="40sp"
         android:textColor="#000000"
-        android:layout_centerVertical="true"
+        android:fontFamily="@font/font_text"
+        android:layout_marginHorizontal="100dp"
+        android:textAlignment="center"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="-100dp"
-        android:layout_marginHorizontal="50dp"/>
+        android:layout_above="@id/textExplanation"
+        android:layout_marginBottom="16dp"
+        />
 
-    <Button
+    <TextView
+        android:id="@+id/textExplanation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/textViewQuestion"
+        android:text="Si es así, tendrás que sacar una foto para completar el proceso."
+        android:textSize="20sp"
+        android:layout_marginHorizontal="50dp"
+        android:layout_marginBottom="16dp"
+        android:textAlignment="center"
+        android:fontFamily="@font/font_text"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"/>
+
+    <LinearLayout
+        android:id="@+id/responseContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textExplanation"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="400dp"
-        android:background="#008f39"
-        android:text="Sí"
-        android:textColor="@android:color/white"
-        android:textSize="16sp"
-        android:onClick="onYesClicked"/>
+        android:gravity="center_vertical|center_horizontal"
+        android:paddingTop="32dp"
+        android:paddingEnd="16dp">
 
-    <Button
-        android:id="@+id/buttonNo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/textViewQuestion"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="400dp"
-        android:layout_marginTop="30dp"
-        android:background="@color/black"
-        android:text="No"
-        android:textColor="@android:color/white"
-        android:textSize="16sp"
-        android:onClick="onNoClicked"/>
+        <LinearLayout
+            android:id="@+id/fotoContainer1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="70dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/fotoExplanation1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="¿NO ERES TÚ? "
+                android:textSize="20sp"
+                android:textAlignment="center"
+                android:fontFamily="@font/font_tittle"
+                android:textColor="@color/black"/>
+
+            <LinearLayout
+                android:id="@+id/fotoContainer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/yes_button_background">
+
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/atras"
+                    android:paddingStart="10dp"/>
+
+
+                <TextView
+                    android:id="@+id/buttonNo"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/font_text"
+                    android:text="  VOLVER ATRAS    "
+                    android:textColor="@android:color/white"
+                    android:textSize="20sp"
+                    android:paddingVertical="10dp"
+                    android:onClick="onNoClicked"/>
+
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <Space
+            android:layout_width="108dp"
+            android:layout_height="match_parent"/>
+        <LinearLayout
+            android:id="@+id/fotoContainer2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/camera_button"
+            android:orientation="horizontal"
+            android:paddingVertical="10dp">
+
+
+            <TextView
+                android:id="@+id/fotoExplanation2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text=" SOY YO "
+                android:textSize="50dp"
+                android:textAlignment="center"
+                android:paddingTop="10dp"
+                android:fontFamily="@font/font_tittle"
+                android:textColor="@color/white"/>
+
+
+            <ImageButton
+                android:id="@+id/buttonYes"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/camera"
+                android:background="@android:color/transparent"
+                android:onClick="onYesClicked"
+                android:padding="5dp"/>
+
+
+
+        </LinearLayout>
+    </LinearLayout>
+
 
 </RelativeLayout>
+
+
 
 
