--- a/app/src/main/res/layout/activity_noti_contra.xml
+++ b/app/src/main/res/layout/activity_noti_contra.xml
@@ -13,6 +13,7 @@
         android:textSize="16sp"
         android:textAlignment="center"
         android:textColor="@color/black"
+        android:fontFamily="@font/font_text"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="-100dp"
@@ -27,6 +28,7 @@
         android:textSize="18sp"
         android:textAlignment="center"
         android:textColor="#000000"
+        android:fontFamily="@font/font_text"
         android:layout_below="@id/textViewExplanation"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="24dp" />
@@ -38,8 +40,9 @@
         android:layout_below="@id/textViewQuestion"
         android:layout_alignParentStart="true"
         android:layout_marginStart="400dp"
-        android:layout_marginTop="30dp"
-        android:background="@color/red"
+        android:layout_marginTop="60dp"
+        android:background="@drawable/yes_button_background"
+        android:fontFamily="@font/font_text"
         android:text="Sí"
         android:textColor="@android:color/white"
         android:textSize="16sp"
@@ -51,9 +54,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/textViewQuestion"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="400dp"
-        android:background="@color/black"
+        android:background="@drawable/no_button_background"
+        android:fontFamily="@font/font_text"
         android:text="No"
         android:textColor="@android:color/white"
         android:textSize="16sp"
