--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -11,7 +11,7 @@
         <item name="android:fontFamily">@font/font_tittle</item>
     </style>
 
-    <style name="DesfichajeButtonText">
+    <style name="ParadaButtonText">
         <item name="android:textColor">@color/sinvad</item>
         <item name="android:textSize">23dp</item>
         <item name="android:fontFamily">@font/font_tittle</item>
