--- a/app/src/main/res/drawable/entrada_button_background.xml
+++ b/app/src/main/res/drawable/entrada_button_background.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- Fondo de la forma -->
-    <item android:drawable="@drawable/edificio" />
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android"
+    android:padding="2dp">
+    <item android:drawable="@drawable/building" />
 
-    <!-- Borde -->
     <item>
         <shape android:shape="rectangle">
             <stroke
@@ -11,4 +10,6 @@
                 android:color="@color/sinvad" />
         </shape>
     </item>
+    <item android:drawable="?android:attr/selectableItemBackground" />
 </layer-list>
+
