--- a/app/src/main/res/drawable/parada_button_background.xml
+++ b/app/src/main/res/drawable/parada_button_background.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- Fondo de la forma -->
-    <item android:drawable="@drawable/maletasalir" />
+    <item android:drawable="@drawable/parada" />
 
-    <!-- Borde -->
     <item>
         <shape android:shape="rectangle">
             <stroke
@@ -11,4 +9,6 @@
                 android:color="@color/sinvad" />
         </shape>
     </item>
+
+    <item android:drawable="?android:attr/selectableItemBackground" />
 </layer-list>
