--- a/app/src/main/res/layout/activity_access_control.xml
+++ b/app/src/main/res/layout/activity_access_control.xml
@@ -7,8 +7,8 @@
         android:id="@+id/textViewSaludo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Pulse para confirmar"
-        android:textSize="60dp"
+        android:text="Pulse y espere a la confirmación:"
+        android:textSize="30dp"
         android:textColor="@color/sinvad"
         android:fontFamily="@font/font_tittle"
         android:layout_centerHorizontal="true"
@@ -23,8 +23,20 @@
         android:orientation="horizontal"
         android:layout_centerInParent="true"
         android:gravity="center_horizontal">
-
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/messageTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textColor="@color/black"
+        android:textSize="60dp"
+        android:fontFamily="@font/font_tittle"
+        android:layout_below="@id/containerLayout"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="32dp"
+        />
 
 </RelativeLayout>
 
