--- a/app/src/main/res/drawable/circle_filled.xml
+++ b/app/src/main/res/drawable/circle_filled.xml
@@ -4,5 +4,5 @@
         android:width="30dp"
         android:height="30dp" />
     <solid
-        android:color="@color/sinvad" />
+        android:color="@color/colorPrimario" />
 </shape>
