--- a/app/src/main/res/drawable/grid_buttons_background.xml
+++ b/app/src/main/res/drawable/grid_buttons_background.xml
@@ -3,5 +3,5 @@
     android:shape="rectangle">
     <stroke
         android:width="0.6dp"
-        android:color="@color/sinvad" />
+        android:color="@color/colorPrimario" />
 </shape>
