--- a/app/src/main/res/layout/dialog_forgot_password.xml
+++ b/app/src/main/res/layout/dialog_forgot_password.xml
@@ -16,7 +16,7 @@
         android:id="@+id/textViewExplanation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Si ha extraviado su contraseña, le recomendamos que se ponga en contacto con su supervisor para recibir orientación y asistencia."
+        android:text="Si has extraviado tu contraseña, te recomendamos que te pongas en contacto con tu supervisor para recibir orientación y asistencia."
         android:textSize="16sp"
         android:textAlignment="center"
         android:textColor="@color/black"
