--- a/app/src/main/res/drawable/entrada_button_background.xml
+++ b/app/src/main/res/drawable/entrada_button_background.xml
@@ -1,15 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="2dp">
-    <item android:drawable="@drawable/building" />
 
+    <!-- Fondo blanco para asegurar que el color se aplique correctamente -->
+    <item android:drawable="@android:color/white" />
+
+    <!-- Imagen original de entrada -->
+    <item android:drawable="@drawable/entrada" />
+
+    <!-- Máscara de color para aplicar tinte -->
+    <item>
+        <bitmap android:src="@drawable/entrada"
+            android:tint="@color/colorPrimario"
+            android:gravity="fill"/>
+    </item>
+
+    <!-- Borde de color primario -->
     <item>
         <shape android:shape="rectangle">
             <stroke
                 android:width="5dp"
-                android:color="@color/sinvad" />
+                android:color="@color/colorPrimario" />
         </shape>
     </item>
+
+    <!-- Efecto de fondo seleccionable -->
     <item android:drawable="?android:attr/selectableItemBackground" />
+
 </layer-list>
 
