--- a/app/src/main/res/layout/activity_identity_verification.xml
+++ b/app/src/main/res/layout/activity_identity_verification.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:text="Hola !"
         android:textSize="100dp"
-        android:textColor="@color/sinvad"
+        android:textColor="@color/colorPrimario"
         android:fontFamily="@font/font_tittle"
         android:layout_centerHorizontal="true"
         android:layout_above="@id/textViewQuestion"
@@ -157,7 +157,6 @@
     </LinearLayout>
 
 </RelativeLayout>
-
 
 
 
