--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,16 +5,16 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:background="@android:color/white">
 
-<ImageView
-    android:id="@+id/logo"
-    android:layout_width="179dp"
-    android:layout_height="124dp"
-    android:src="@drawable/logo"
-    app:layout_constraintBottom_toTopOf="@id/textViewMessage"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    android:layout_marginTop="16dp"
-    android:layout_marginBottom="16dp"/>
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toTopOf="@id/textViewMessage"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintWidth_max="200dp"
+        app:layout_constraintHeight_max="200dp" />
 
     <TextView
         android:id="@+id/textViewMessage"
