--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -7,13 +7,13 @@
 
     <style name="ResultButtonText">
         <item name="android:textColor">@color/white</item>
-        <item name="android:textSize">23dp</item>
+        <item name="android:textSize">27dp</item>
         <item name="android:fontFamily">@font/font_tittle</item>
     </style>
 
     <style name="ParadaButtonText">
-        <item name="android:textColor">@color/sinvad</item>
-        <item name="android:textSize">23dp</item>
+        <item name="android:textColor">@color/colorPrimario</item>
+        <item name="android:textSize">27dp</item>
         <item name="android:fontFamily">@font/font_tittle</item>
     </style>
 
