--- a/app/src/main/res/layout/activity_identity_verification.xml
+++ b/app/src/main/res/layout/activity_identity_verification.xml
@@ -81,19 +81,21 @@
         android:layout_alignParentEnd="true"
         android:gravity="center_vertical|center_horizontal"
         android:paddingTop="40dp"
-        android:paddingEnd="16dp">
+        android:paddingEnd="16dp"
+        android:orientation="horizontal">
 
         <LinearLayout
             android:id="@+id/fotoContainer1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="70dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="visible">
 
             <LinearLayout
                 android:id="@+id/fotoContainer"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="100dp"
                 android:orientation="horizontal"
                 android:background="@drawable/yes_button_background"
                 android:layout_marginEnd="100dp"
@@ -102,7 +104,8 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/back"/>
+                    android:src="@drawable/back"
+                    android:onClick="onNoClicked"/>
 
 
                 <TextView
@@ -125,7 +128,7 @@
         <LinearLayout
             android:id="@+id/fotoContainer2"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="100dp"
             android:background="@drawable/camera_button"
             android:orientation="horizontal"
             android:layout_marginEnd="70dp">
@@ -152,6 +155,38 @@
                 android:fontFamily="@font/font_bold"
                 android:textColor="@color/white"
                 android:onClick="onYesClicked"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/fotoContaine"
+            android:layout_width="wrap_content"
+            android:layout_height="100dp"
+            android:orientation="horizontal"
+            android:background="@drawable/yes_button_background"
+            android:layout_marginEnd="100dp"
+            android:paddingVertical="10dp"
+            android:visibility="gone">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/back"
+                android:onClick="onNoClicked"/>
+
+
+            <TextView
+                android:id="@+id/buttonN"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="VOLVER"
+                android:textSize="50dp"
+                android:layout_marginEnd="5dp"
+                android:textAlignment="center"
+                android:fontFamily="@font/font_bold"
+                android:textColor="@color/white"
+                android:onClick="onNoClicked"/>
+
 
         </LinearLayout>
     </LinearLayout>
