--- a/app/src/main/res/values/personalizacion.xml
+++ b/app/src/main/res/values/personalizacion.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimario">#00407a</color>
+    <color name="colorPrimario">#299826</color>
 
     <drawable name="imagenEmpresa">@drawable/pescadosruben</drawable>
 </resources>
