--- a/app/src/main/res/drawable/qrscanbig_background.xml
+++ b/app/src/main/res/drawable/qrscanbig_background.xml
@@ -1,26 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android"
+    android:padding="2dp">
 
     <!-- Fondo blanco para asegurar que el color se aplique correctamente -->
     <item android:drawable="@android:color/white" />
 
-    <!-- Imagen original de parada -->
-    <item android:drawable="@drawable/parada" />
+    <!-- Imagen original de entrada -->
+    <item android:drawable="@drawable/qrscanbig" />
 
     <!-- Máscara de color para aplicar tinte -->
     <item>
-        <bitmap android:src="@drawable/parada"
+        <bitmap android:src="@drawable/qrscanbig"
             android:tint="@color/colorPrimario"
             android:gravity="fill"/>
-    </item>
-
-    <!-- Borde de color primario -->
-    <item>
-        <shape android:shape="rectangle">
-            <stroke
-                android:width="5dp"
-                android:color="@color/colorPrimario" />
-        </shape>
     </item>
 
     <!-- Efecto de fondo seleccionable -->
