--- a/app/src/main/res/layout/dialog_forgot_password.xml
+++ b/app/src/main/res/layout/dialog_forgot_password.xml
@@ -9,21 +9,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="32dp"
-        android:src="@drawable/alert" />
+        android:layout_marginTop="10dp"
+        android:src="@drawable/alert_background" />
 
     <TextView
         android:id="@+id/textViewExplanation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Si has extraviado tu contraseña, te recomendamos que te pongas en contacto con tu supervisor para recibir orientación y asistencia."
+        android:text="Comunícate con tu supervisor para recibir orientación y asistencia."
         android:textSize="16sp"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:fontFamily="@font/font_text"
         android:layout_below="@id/imageView"
         android:layout_centerHorizontal="true"
-        android:layout_marginHorizontal="45dp"/>
+        android:layout_marginHorizontal="45dp"
+        android:layout_marginVertical="10dp"/>
 
     <Button
         android:id="@+id/buttonAceptar"
