--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -1,20 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="result_button">
-        <item name="android:layout_width">100dp</item>
-        <item name="android:layout_height">100dp</item>
-    </style>
-
     <style name="ResultButtonText">
-        <item name="android:textColor">@color/white</item>
-        <item name="android:textSize">27dp</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textSize">22dp</item>
         <item name="android:fontFamily">@font/font_tittle</item>
     </style>
 
-    <style name="ParadaButtonText">
+    <style name="CustomButtonStyle">
+        <item name="android:background">@drawable/button_border</item>
+        <item name="android:padding">10dp</item>
         <item name="android:textColor">@color/colorPrimario</item>
-        <item name="android:textSize">27dp</item>
-        <item name="android:fontFamily">@font/font_tittle</item>
+        <item name="android:textSize">18sp</item>
     </style>
-
 </resources>
